src/test/deca/syntax/invalid/methode_parenthese.deca
// Description:
//    Program testing the raising of an exception no name class.
//
// Results:
//    Line 10: no viable alternative at input 'voidmethode{'
//
// History:
//    Created on 19/01/2025

class Test {
    void methode {
        int x = 10;
    }
}
